fixed the spacing of each carousel when loading

--- a/public/app/directives/h-trendingDir/h-trendingDir.scss
+++ b/public/app/directives/h-trendingDir/h-trendingDir.scss
@@ -1,4 +1,4 @@
-/*@import url('https://fonts.googleapis.com/css?family=Roboto');*/
+
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
 
 $tvd-container-bg-color: #F1F1F1;
@@ -78,7 +78,7 @@ $primary-font-family: 'Roboto', sans-serif;
   // background: #F1F1F1;
   display: flex;
   justify-content: center;
-  height: 30vh;
+  // height: 30vh;
   position: relative;
   max-width: 1100px;
   min-width: 1100px;
@@ -148,7 +148,7 @@ $primary-font-family: 'Roboto', sans-serif;
 
   .trending-video-wrapper {
     // NOTE: this is in front of the psuedo-container
-    position: absolute;
+    // position: absolute;
     background: #F1F1F1;
     max-width: 1058px;
     width: 100%;
