--- a/public/app/directives/landingPlaylistDir/landingPlaylistDir.scss
+++ b/public/app/directives/landingPlaylistDir/landingPlaylistDir.scss
@@ -83,7 +83,7 @@ $primary-font-family: 'Roboto', sans-serif;
   // background: #F1F1F1;
   display: flex;
   justify-content: center;
-  height: 30vh;
+  // height: 30vh;
   position: relative;
   max-width: 1100px;
   min-width: 1100px;
@@ -153,7 +153,7 @@ $primary-font-family: 'Roboto', sans-serif;
 
   .h-trending-video-wrapper {
     // NOTE: this is in front of the psuedo-container
-    position: absolute;
+    // position: relative;
     background: #F1F1F1;
     max-width: 1058px;
     width: 100%;
